--- a/sidepanel.html
+++ b/sidepanel.html
@@ -1,13 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/icons/logo.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extension + React + TS + Vite</title>
+    <title>Sidepanel</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script type="module" src="/src/sidepanel/index.tsx"></script>
   </body>
 </html>
